# anise

./: .gitignore  .gitmodules  Cargo.toml
anise-cpp/: BUILD.bazel  CMakeLists.txt  Cargo.toml  MODULE.bazel  bazel-anise-cpp  bazel-bin  bazel-out  bazel-testlogs  build.rs  justfile
anise-cpp/cmake_modules/: CxxAnise.cmake
anise-cpp/cpp/include/: CMakeLists.txt  blobstore.h
anise-cpp/cpp/src/: CMakeLists.txt  blobstore.cpp
anise-cpp/cpp/tests/: CMakeLists.txt  main.cpp
anise-cpp/include/: blobstore.h
anise-cpp/src/: blobstore.cpp  main.rs
anise-cpp/tools/bazel/: rust_cxx_bridge.bzl
