[package]
name = "anise-cpp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
